✏️ Context API 동적으로 사용하기 정리

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ dist
 08_Hooks/hooks-tutorial/public/
 09_Styling/styling-react/public/
 11_SPA/router-tutorial/public/
+13_ContextAPI/context-tutorial/public/
